change about page, try to fix buttons on ios safari

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -61,6 +61,7 @@
     @media #{$mobile} {
       max-width: 100%;
       height: auto;
+      height: 100%;
       max-height: calc(100% - 28px);
     }
 
